# lambda

./: README.md  lambda.cabal
src/: .Main.hs.swp  Main.hs
src/Lambda/: .Core.hs.swp  .Eval.hs.swo  .Eval.hs.swp  .Parse.hs.swp  Core.hs  Eval.hs  Parse.hs
